package gameelement.element;

public class StarDustElement extends BaseElement {
    // Constructors
    public StarDustElement() {
        super("Star Dust", "StarDust.png");
    }

}
